[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "backendev"
version = "1.0.0"
description = "Симулятор бэкенд-разработчика"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["toga-android"]

[project.license]
file = "LICENSE"

authors = [
    { name = "Ваше Имя", email = "your@email.com" }
]

[tool.briefcase]
project_name = "Backendev"
bundle = "org.example"
version = "1.0.0"

[tool.briefcase.app.backendev]
formal_name = "Backendev"
description = "Симулятор бэкенд-разработчика"
sources = ["src/Backendev"]
requires = ["toga-android"]

[tool.briefcase.app.backendev.android]
icon = "resources/icon.png"
